2012-02-07 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Improve handling of register pairs, in particular hl.

2012-02-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCast.c:
	  Fixed bug #3073647.
	* src/SDCCsymt.c:
	  Fixed #3034739.

2012-02-06 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/bug2935162.c: don't assume 32-bit long host

2012-02-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed bug #3482732.
	* src/SDCClrange.h,
	  src/SDCClrange.c,
	  src/SDCCopt.c,
	  support/Regression/bug3482217.c:
	  Fixed bug #3482217.

2012-02-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCval.c (constVal): fixed bug 2935162
	* support/regression/tests/bug2935162.c: new, added

2012-02-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/z80.h,
	  src/z80/ralloc2.cc:
	  Fixes for #3482732, preparations for exact cost function in gbz80 port.

2012-02-03 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fix generation of invalid instructions when --reserve-regs-iy is used.

2012-01-31 Borut Razem <borut.razem AT gmail.com>

	* support/regression/ports/ucgbz80/spec.mk:
	  simulation timeout increased to 20s due to timeout failure on
	  gcc-torture-execute-divcmp-3 regressin test on
	  mypants.neurotica.com NetBSD/Sparc64 build machine

2012-01-31 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  support/regression/tests/bug3482146.c:
	  Fixed bug #3482146.

2012-01-31 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/bug3482146.c:
	  Regression test for bug #3482146.

2012-01-30 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fixed bug #3480597.

2012-01-29 Borut Razem <borut.razem AT gmail.com>

	* support/regression/tests/key.c: fixed for Mac OS X
