@@ -1,3 +1,11 @@
+2012-02-08 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/z80/gen.c:
+	  Use bit instruction for & in jump condition.
+	* src/z80/peep.c,
+	  src/z80/peeph-z80.def:
+	  Minor peephole improvements.
+
 2012-02-07 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/z80/ralloc2.cc,
